Making tests more resilient to run in different environments